--- a/app/src/main/res/layout/item_new_layout_ver.xml
+++ b/app/src/main/res/layout/item_new_layout_ver.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="12dp">
         <ImageView
-            android:src="@drawable/sushi"
+            android:src="@drawable/img_3_home"
             android:id="@+id/image"
             android:layout_width="115dp"
             android:layout_height="115dp"/>
@@ -25,24 +25,87 @@
         android:layout_marginEnd="8dp"
         android:layout_height="wrap_content">
 
-        <com.google.android.material.textview.MaterialTextView
+
+        <RelativeLayout
+            android:id="@+id/promotion"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_height="22dp">
+            <RelativeLayout
+                android:id="@+id/iconly_bold"
+                android:layout_marginTop="4dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                >
+
+                <View
+                    android:id="@+id/star"
+                    android:layout_width="11.67dp"
+                    android:layout_height="11.08dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="1.17dp"
+                    android:layout_marginTop="1.46dp"
+                    android:background="@drawable/start" />
+
+                <TextView
+                    android:id="@+id/type_16"
+                    android:layout_width="19dp"
+                    android:layout_height="18dp"
+                    android:layout_marginLeft="4dp"
+                    android:layout_toRightOf="@+id/star"
+                    android:gravity="top"
+                    android:lineSpacingExtra="4sp"
+                    android:text="@string/type_16"
+                    android:textAppearance="@style/type_16"
+                    android:translationY="-1.84sp" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/sale"
+                android:layout_toRightOf="@+id/iconly_bold"
+                android:layout_width="62dp"
+                android:layout_height="22dp"
+                android:layout_marginLeft="8dp"
+                android:background="@drawable/sale">
+
+                <TextView
+                    android:id="@+id/off"
+                    android:layout_width="46dp"
+                    android:layout_height="18dp"
+                    android:text="@string/off"
+                    android:textAppearance="@style/off"
+                    android:lineSpacingExtra="4sp"
+                    android:translationY="-1.84sp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="4dp"
+                    android:gravity="center_horizontal|top" />
+            </RelativeLayout>
+
+
+        </RelativeLayout>
+
+        <TextView
+
+            android:layout_below="@+id/promotion"
             android:id="@+id/name_product"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:maxLines="3"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:text="Phân biệt sốt xuất huyết hân biệt sốt xuất huyết "
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:layout_width="195dp"
+            android:layout_height="20dp"
+            android:text="@string/pizza_th_gi"
+            android:textAppearance="@style/pizza_th_gi"
+            android:lineSpacingExtra="3sp"
+            android:translationY="-1.65sp"
+            android:layout_marginTop="12dp"
+            android:gravity="top"
+            />
         <com.google.android.material.textview.MaterialTextView
             android:layout_below="@id/name_product"
             android:id="@+id/price_product"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:text="12000 d"
-
+            android:text="48.000 đ"
+            android:layout_marginTop="12dp"
+            android:textColor="@color/red"
             android:textSize="18sp"
             android:textStyle="bold" />
         <LinearLayout
@@ -60,7 +123,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/title"
-                android:text="15:08, 28-08-2021"
                 android:textColor="@color/black"
                 android:textSize="15sp" />
         </LinearLayout>
