--- a/app/src/main/res/layout/item_product_layout_hoz.xml
+++ b/app/src/main/res/layout/item_product_layout_hoz.xml
@@ -3,18 +3,20 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginRight="10dp"
+    android:id="@+id/Liner_hoz"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         app:cardCornerRadius="12dp">
     <ImageView
         android:id="@+id/image"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/buger"/>
+        android:src="@drawable/img_3"/>
     </androidx.cardview.widget.CardView>
     <RelativeLayout
         android:layout_width="match_parent"
@@ -35,7 +37,7 @@
                 android:maxLines="2"
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
-                android:text="Phân biệt sốt xuất huyết hân biệt sốt xuất huyết "
+                android:text="Burger khổng lồ bà Năm "
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -44,7 +46,8 @@
                 android:id="@+id/price_product"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:text="12000 d"
+                android:text="24 000 đ"
+                android:textColor="@color/red"
                 android:textSize="18sp"
                 android:textStyle="bold" />
             <LinearLayout
