--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,8 +29,13 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">#F44849</item>
     </style>
+    <style name="pizza1">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#66707A</item>
+        <item name="android:layout_marginLeft">5dp</item>
+    </style>
     <style name="some_id">
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">18sp</item>
         <item name="android:textColor">#222B45</item>
     </style>
     <!-- styles.xml -->
@@ -57,5 +62,38 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">#171725</item>
     </style>
-
+    <style name="off">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#F44849</item>
+    </style>
+    <style name="type_16">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#FACC15</item>
+    </style>
+    <style name="nh_gi_cao">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#171725</item>
+    </style>
+    <style name="xem_th_m">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#F44849</item>
+<!--        <item name="android:textStyle">italic</item>-->
+    </style>
+    <style name="ph_bi_n">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#171725</item>
+    </style>
+    <style name="gi_h_ng">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#171725</item>
+    </style>
+    <style name="xo_">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#F44849</item>
+    </style>
+    <style name="thanh_to_n_">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
 </resources>
