--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,15 @@
         <item name="android:layout_height">48dp</item>
     </style>
 
+    <style name="PolyInputLayoutChat" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        <item name="boxCornerRadiusTopStart">24dp</item>
+        <item name="boxCornerRadiusTopEnd">24dp</item>
+        <item name="boxCornerRadiusBottomStart">24dp</item>
+        <item name="boxCornerRadiusBottomEnd">24dp</item>
+        <item name="boxBackgroundColor">@color/grey_light</item>
+        <item name="boxStrokeColor">@color/boxstroke_outline</item>
+    </style>
+
     <style name="PolyButton">
         <item name="cornerRadius">44dp</item>
         <item name="backgroundTint">@color/grey</item>
@@ -56,6 +65,12 @@
         <item name="android:layout_marginLeft">20dp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">#171725</item>
+    </style>
+
+    <style name="TitleToolBarChat">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">#171725</item>
+        <item name="fontWeight">600</item>
     </style>
 
 </resources>
