--- a/app/src/main/res/layout/fragment_card.xml
+++ b/app/src/main/res/layout/fragment_card.xml
@@ -5,10 +5,24 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.card.CardFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+        <include
+            android:id="@+id/layout_header"
+            layout="@layout/toolbar_header"
+            />
+
+        <LinearLayout
+            android:id="@+id/layout_body"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/red_light">
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </FrameLayout>
