--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.love.LoveFragment">
+    tools:context=".ui.main.love.FavouriteFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
