--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -23,4 +23,8 @@
             android:id="@+id/action_profileFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/viewPagerFragment"
+        android:name="com.fpoly.smartlunch.ui.security.onboarding.ViewPagerFragment"
+        android:label="ViewPagerFragment" />
 </navigation>
