--- a/app/src/main/res/layout/toolbar_header.xml
+++ b/app/src/main/res/layout/toolbar_header.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp">
-
+    android:layout_height="?actionBarSize">
+    <ImageView
+        android:visibility="gone"
+        android:id="@+id/btn_back_toolbar"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:src="@drawable/back_arrow"/>
     <TextView
         android:id="@+id/tv_title_toolbar"
         android:layout_width="wrap_content"
